jenkins/dump-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1beta1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","nginx.ingress.kubernetes.io/proxy-body-size":"50m"},"name":"jenkins-ingress","namespace":"jenkins"},"spec":{"rules":[{"host":"jenkins.fortytwobinary.com","http":{"paths":[{"backend":{"serviceName":"jenkins-public","servicePort":8080},"path":"/"}]}}],"tls":[{"hosts":["jenkins.fortytwobinary.com"],"secretName":"jenkins-prod-tls"}]}}
      nginx.ingress.kubernetes.io/proxy-body-size: 50m
    creationTimestamp: "2021-04-11T00:23:49Z"
    generation: 1
    managedFields:
    - apiVersion: networking.k8s.io/v1beta1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:cert-manager.io/cluster-issuer: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:nginx.ingress.kubernetes.io/proxy-body-size: {}
        f:spec:
          f:rules: {}
          f:tls: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: "2021-04-11T00:23:49Z"
    - apiVersion: networking.k8s.io/v1beta1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: nginx-ingress-controller
      operation: Update
      time: "2021-04-11T00:24:18Z"
    name: jenkins-ingress
    namespace: jenkins
    resourceVersion: "3945339"
    uid: a3b83bbf-cc9e-43da-9ec2-b851eda478d2
  spec:
    rules:
    - host: jenkins.fortytwobinary.com
      http:
        paths:
        - backend:
            service:
              name: jenkins-public
              port:
                number: 8080
          path: /
          pathType: ImplementationSpecific
    tls:
    - hosts:
      - jenkins.fortytwobinary.com
      secretName: jenkins-prod-tls
  status:
    loadBalancer:
      ingress:
      - ip: 192.168.1.14
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
