jenkins/dump-service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2021-04-11T00:22:06Z"
    labels:
      role: webserver
    managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:labels:
            .: {}
            f:role: {}
        f:spec:
          f:ports:
            .: {}
            k:{"port":8080,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
            k:{"port":50000,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector:
            .: {}
            f:role: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: kubectl-expose
      operation: Update
      time: "2021-04-11T00:22:06Z"
    name: jenkins-public
    namespace: jenkins
    resourceVersion: "3945030"
    uid: 7df1c7f1-bf04-4d8b-8d00-d17ce7c32002
  spec:
    clusterIP: 10.103.161.221
    clusterIPs:
    - 10.103.161.221
    ports:
    - name: port-1
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: port-2
      port: 50000
      protocol: TCP
      targetPort: 50000
    selector:
      role: webserver
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
